<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="downloaded">Downloaded</string>
    <string name="online">Online</string>
    <string name="player">Player</string>
    <string name="search_music">Поиск треков</string>
    <string name="music_name">Название трека</string>
    <string name="artist_name">Имя исполнителя</string>
    <string name="album_picture">Обложка трека</string>
    <string name="permissions_arent_granted">Разрешение на доступ к аудио не предоставлено</string>
    <string name="permission_request">Permission needed to load local tracks</string>
    <string name="search">Поиск по сохраненным</string>
    <string name="search_from_internet">Поиск из сети</string>
    <string name="retry">Повторить</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="time">00:00</string>
    <string name="dash"> - </string>
    <string name="photo">photo</string>
    <string name="loading_music">Загрузка трека</string>
</resources>