<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageViewCover"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/album_picture"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textViewCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:src="@drawable/skip_previous"/>

        <ImageButton
            android:id="@+id/buttonPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/play"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:src="@drawable/skip_next"/>
    </LinearLayout>
</LinearLayout>
