<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_layout"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/track_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/photo_placeholder"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:textStyle="bold"
            android:textColor="#000"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/artist"
            android:textColor="#777"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_prev"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/previous"
        android:src="@drawable/skip_previous" />

    <ImageButton
        android:id="@+id/btn_play_pause"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/play_pause"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/play" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/next"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/skip_next" />
</LinearLayout>
